RESOLVED FIXED147281
[iOS] Occasional crashes in WebPage::elementDidBlur()'s async block.
https://bugs.webkit.org/show_bug.cgi?id=147281
Summary [iOS] Occasional crashes in WebPage::elementDidBlur()'s async block.
Andreas Kling
Reported 2015-07-24 15:35:47 PDT
Attachments
Patch for landing (1.82 KB, patch)
2015-07-26 17:04 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2015-07-26 17:04:10 PDT
Created attachment 257539 [details] Patch for landing
WebKit Commit Bot
Comment 2 2015-07-27 16:02:41 PDT
Comment on attachment 257539 [details] Patch for landing Clearing flags on attachment: 257539 Committed r187459: <http://trac.webkit.org/changeset/187459>
WebKit Commit Bot
Comment 3 2015-07-27 16:02:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.