[iOS] Occasional crashes in WebPage::elementDidBlur()'s async block. <https://webkit.org/b/147281> <rdar://problem/21701858>

Reviewed by Anders Carlsson.

Protect the WebPage object until the dispatch_async block has finished.
I have no way to repro this, but there's evidence of some crashing here.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::elementDidBlur):


Canonical link: https://commits.webkit.org/165422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187459 268f45cc-cd09-0410-ab3c-d52691b4dbfc